--- a/index2.html
+++ b/index2.html
@@ -17,9 +17,11 @@
                 CHRISTMAS!!!
             </span>
         </div>
+        <div style="display:flex;justify-content:center;">
+            <div>
         <div class="crown" style="margin: 0em 42em 0em 42em;">
                          🌟</div>
-        <div><ul>
+        <ul>
                        <li class="leaves" style="margin: 0em 41.4em 0em 41.4em;"> 🌲🌲 </li>  
                      <li class="crown" style="margin: 0em 40.6em 0em 40.6em;">  🌲🌲🌲</li>
                     <li class="leaves" style="margin: 0em 40em 0em 40em;">  🌲❄️🌲🌲</li>
@@ -48,6 +50,7 @@
                     <li class="stem2">  🎁🎁</li>
                     </ul>
         </div>
+            </div></div>
 
     </body>
     
