--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
     
 </html>
 <!--MERRY CH🎁STM🎅S!!! ❄️🎇🔔🌟🎄-->
-© 2021 GitHub, Inc.
-Terms
-Privac
+© <script type="text/javascript">
+  document.write(new Date().getFullYear());
+</script> Carsamer. All rights reserved.
